# bragi-core

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  config.example.toml  settings.example.toml
src/: lib.rs  main.rs  server.rs  settings.rs
src/scraper/: bili.rs  bilibili.rs  mod.rs  netease.rs  spotify.rs  youtube.rs
src/util/: cookie.rs  mod.rs
src/utils/: disk_cookie_store.rs  mod.rs  request.rs
