[package]
name = "bragi-core"
authors = ["xylonx <xylonx@xylonx.com>"]
version = "0.1.0"
edition = "2021"
description = "The backend part of Bragi - an universal music player"
keywords = ["player", "youtube", "spotify", "bilibili", "netease music"]
repository = "https://github.com/xylonx/bragi-core"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9.2"
prost = "0.11.8"
serde = { version = "1.0.155", features = ["derive"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "fs"] }
bytes = "1.4.0"
lazy_static = "1.4.0"
anyhow = "1.0.69"
async-trait = "0.1.66"
parking_lot = "0.12.1"
dashmap = { version = "5.4.0", features = ["rayon"] }
rayon = "1.7.0"
futures = "0.3.27"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["cookies", "json"] }
env_logger = "0.10.0"
regex = "1.7.1"
serde_repr = "0.1.11"
tower = "0.4.13"
librespot = { version = "0.5.0-dev", default-features = false, git = "https://github.com/librespot-org/librespot.git", branch = "dev", features = ["passthrough-decoder", "with-dns-sd"] }
crossbeam-utils = "0.8.15"
config = { version = "0.13.3", default-features = false, features = ["toml"] }
reqwest_cookie_store = "0.5.0"
cookie = "0.17.0"
clap = { version = "4.1.10", features = ["derive"] }
html-escape = "0.2.13"
serde_json = "1.0.94"
rspotify = "0.11.7"
toml = "0.7.4"

[build-dependencies]
tonic-build = "0.9.2"
