[package]
name = "bragi-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-web-httpauth = "0.8.1"
anyhow = "1.0.79"
async-trait = "0.1.77"
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive"] }
config = { version = "0.13.4", default-features = false, features = ["toml"] }
futures = "0.3.30"
html-escape = "0.2.13"
invidious = { version = "0.7.4", default-features = false, features = ["reqwest_async"] }
lazy_static = "1.4.0"
md5 = "0.7.0"
parking_lot = "0.12.1"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["json", "cookies"] }
reqwest_cookie_store = "0.6.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.112"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
